--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
               <div class="view">
                 <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
                 <label>{{todo.title}}</label>
-                <button class="destroy" (click)="removeTodo(todo)"></button>
+                <button class="destroy btn-link" (click)="removeTodo(todo)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
               </div>
             </li>
           </ul>
