--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,16 +13,36 @@
     <div class="row">
       <div class="col-xs-12 col-sm-offset-1 col-sm-3 todo-list-wrapper">
         <h3 class="text-muted">To do</h3>
-        <input class="new-todo text-muted" placeholder="+ Add item" autofocus="" [(ngModel)]="newTodo.title" (keyup.enter)="addTodo()">
+
+        <input class="new-todo text-muted" 
+              placeholder="+ Add item" 
+              autofocus="" 
+              [(ngModel)]="newTodo.title" 
+              (keyup.enter)="addTodo()">
       
         <section class="main" *ngIf="todos.length > 0">
           <ul class="todo-list">
-            <li *ngFor="let todo of todos" [class.completed]="todo.complete">
+
+            <li *ngFor="let todo of todos" 
+                [class.completed]="todo.complete">
+
               <div class="view">
-                <input class="toggle" type="checkbox" (click)="toggleTodoComplete(todo)" [checked]="todo.complete">
+
+                <input class="toggle" 
+                      type="checkbox" 
+                      (click)="toggleTodoComplete(todo)" 
+                      [checked]="todo.complete">
+
                 <label>{{todo.title}}</label>
-                <button class="destroy btn-link" (click)="removeTodo(todo)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+
+                <button class="destroy btn-link" 
+                      (click)="removeTodo(todo)">
+
+                      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                      
+                </button>
               </div>
+              <!--<input class="edit" value="{{todo.title}}">-->
             </li>
           </ul>
         </section>
@@ -36,11 +56,13 @@
       </div>
     </div>
   </div>
-  
   <footer class="footer container" *ngIf="todos.length > 0">
     <div class="row">
       <div class="col-xs-12 col-sm-offset-1 col-sm-3">
-        <span class="todo-count"><strong>{{todos.length}}</strong> {{todos.length == 1 ? 'item' : 'items'}} left</span>
+        <span class="todo-count">
+          <strong>{{todos.length}}</strong> 
+          {{todos.length == 1 ? 'item' : 'items'}} left
+        </span>
       </div>
     </div>
   </footer>
